[gd_scene load_steps=9 format=3 uid="uid://ckgd14v4c8j6u"]

[ext_resource type="Script" path="res://Scripts/UI/Boot.gd" id="1_yxcjx"]
[ext_resource type="Texture2D" uid="uid://bkufwj8ahoe4w" path="res://Assets/Images/UI/background.png" id="2_5reyy"]
[ext_resource type="FontFile" uid="uid://cir48cl3fhleo" path="res://Assets/Fonts/montserrat.bold.ttf" id="3_jxyny"]
[ext_resource type="Texture2D" uid="uid://d4mygy4hg3w76" path="res://Assets/Images/UI/StartButton.png" id="3_llvcv"]
[ext_resource type="FontFile" uid="uid://ep3h7ef2uyq" path="res://Assets/Fonts/montserrat.medium.ttf" id="4_i5t5v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0gmtf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pbvmi"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlxqw"]

[node name="Boot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxcjx")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5reyy")

[node name="TitleVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.15
anchor_right = 0.97
anchor_bottom = 0.15
offset_top = 0.0800018
offset_right = 34.1
offset_bottom = 224.08
alignment = 1

[node name="TitleLabel" type="Label" parent="TitleVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_jxyny")
theme_override_font_sizes/font_size = 100
text = "Welcome to FinLit"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="TitleVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("4_i5t5v")
theme_override_font_sizes/font_size = 60
text = "Subtitle"
horizontal_alignment = 1

[node name="VariableContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.37
anchor_right = 0.8
anchor_bottom = 0.37
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HorizonRow" type="HBoxContainer" parent="VariableContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NameLabel" type="Label" parent="VariableContainer/HorizonRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_jxyny")
theme_override_font_sizes/font_size = 60
text = "Horizon:"

[node name="OptionButton" type="OptionButton" parent="VariableContainer/HorizonRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_i5t5v")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_0gmtf")
item_count = 3
popup/item_0/text = "10"
popup/item_0/id = 1
popup/item_1/text = "20"
popup/item_1/id = 2
popup/item_2/text = "30"
popup/item_2/id = 3

[node name="DifficultyRow" type="HBoxContainer" parent="VariableContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="NameLabel" type="Label" parent="VariableContainer/DifficultyRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_jxyny")
theme_override_font_sizes/font_size = 60
text = "Difficulty:"

[node name="OptionButton" type="OptionButton" parent="VariableContainer/DifficultyRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("4_i5t5v")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_pbvmi")
item_count = 3
popup/item_0/text = "Easy"
popup/item_0/id = 1
popup/item_1/text = "Medium"
popup/item_1/id = 2
popup/item_2/text = "Hard"
popup/item_2/id = 3

[node name="StartButton" type="Button" parent="."]
custom_minimum_size = Vector2(400, 150)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
offset_left = -200.0
offset_top = -75.0
offset_right = 200.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxEmpty_nlxqw")
icon = ExtResource("3_llvcv")
flat = true

[node name="ButtonLabel" type="Label" parent="StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_fonts/font = ExtResource("3_jxyny")
theme_override_font_sizes/font_size = 60
text = "START"
horizontal_alignment = 1
